<resources>
    <string name="app_name">SmartSendApp</string>

    <!--Server url-->
    <string name="server_url">http://galaxyict.com/tajim.galaxyict.com/smartsend</string>
    <string name="gcm_project_number">182679639571</string>

    <!--Activity title-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_client_dash_board">ClientDashBoardActivity</string>
    <string name="title_activity_rider_dashboard">RiderDashboardActivity</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="title_activity_order_details_for_rider">OrderDetailsForRiderActivity</string>
    <string name="title_activity_accepted_rider">AcceptedRiderActivity</string>
    <string name="title_activity_order_failed">OrderFailedActivity</string>
    <string name="title_activity_order_details_accepted">OrderDetailsAcceptedActivity</string>
    <string name="title_client_order_history">ClientOrderHistoryActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>

    <!--Menu-->
    <string name="menu_title_dashboard">Dashboard</string>
    <string name="menu_title_place_order">Place Order</string>
    <string name="menu_title_current_order">Current Orders</string>
    <string name="menu_title_order_history">Order History</string>
    <string name="menu_title_my_account">My Account</string>
    <string name="menu_title_signout">Signout</string>

    <!--content-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Button text-->
    <string name="btn_text_place_order">PLACE ORDER</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below :</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="send_password_reset">SEND PASSWORD RESET</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="pickup">PICKUP</string>
    <string name="delivery">DELIVERY</string>
    <string name="your_package_is_being_delivered_nto_your_location">Order is submitted, we will deliver it shortly.</string>
    <string name="track_order">TRACK ORDER</string>
    <string name="proccessing">Processing</string>
    <string name="back"><u>Back</u></string>
    <string name="processing">Processing…</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="lets_go">Lets Go</string>
    <string name="initial_place_order_headline">Get Started With Order Process</string>
    <string name="title_activity_client_map">ClientMapActivity</string>
    <string name="arrow_down">ARROW_DOWN</string>
    <string name="back_to_dashboard">Back</string>
    <string name="backarrow">BackArrow</string>
    <string name="title_rider_profile">RiderProfileActivity</string>
    <string name="title_activity_client_menu">ClientMenuActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="app_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_title_scan_orders">Scan Orders</string>
    <string name="menu_title_view_pending_orders">View Active Orders</string>
    <string name="title_activity_rider_map">RiderMapActivity</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="title_activity_address_picker">AddressPickerActivity</string>
    <string name="title_activity_order_summary">OrderSummaryActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="title_activity_search_courier">SearchCourierActivity</string>
    <string name="title_activity_location_request">LocationRequestActivity</string>
    <string name="title_activity_no_rider_found">NoRiderFoundActivity</string>
    <string name="title_activity_active_orders">RiderActiveOrdersActivity</string>
    <string name="title_client_profile">ClientProfileActivity</string>
    <string name="title_active_order_map">ActiveOrderMapActivity</string>
    <string name="title_client_rider_history">RiderOrderHistoryActivity</string>
    <string name="title_activity_rider_receipt">RiderReceiptActivity</string>
</resources>
