<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_login"
    android:padding="10dp"
    tools:context="com.example.smartsend.smartsendapp.activities.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="0dp">

            <ImageView
                android:id="@+id/logoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:foregroundGravity="center"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/etResetUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logoLogin"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="@string/email"
                android:drawableStart="@drawable/ic_lock_custom"
                android:drawableLeft="@drawable/ic_lock_custom"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:background="@drawable/custom_input"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="#AFAEAE"
                android:textColorHint="#AFAEAE"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />


            <Button
                android:id="@+id/btnResetSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etResetUserEmail"
                android:layout_marginTop="20dp"
                android:background="#4CA1FE"
                android:text="@string/send_password_reset"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnArrowBack"
        android:layout_width="17dp"
        android:layout_height="18dp"
        android:background="@drawable/ic_back_arrow"
        app:layout_anchor="@+id/scrollView3"
        app:layout_anchorGravity="start|top"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
